--- a/Views/MenuCategories/Create.cshtml
+++ b/Views/MenuCategories/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
+    Viewbag.menuId;
 <h1>Create</h1>
 
 <h4>MenuCategory</h4>
@@ -19,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MenuId" class="control-label"></label>
-                <select asp-for="MenuId" class ="form-control" asp-items="ViewBag.MenuId"></select>
+                <select asp-for="MenuId" class ="form-control" asp-items="@ViewBag.MenuId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
