--- a/Views/MenuCategories/Index.cshtml
+++ b/Views/MenuCategories/Index.cshtml
@@ -28,9 +28,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Menu.Id)
+                @ViewBag.Menu
             </td>
             <td>
+                <a  asp-controller="MenuItems" asp-action="Index" asp-route-id="@item.Id">Alternativ</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
