--- a/Views/MenuCategories/Edit.cshtml
+++ b/Views/MenuCategories/Edit.cshtml
@@ -31,8 +31,8 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-id="@ViewBag.id">Back to List</a> |
-</div>
+    <a asp-action="Index" asp-route-id="@Model.MenuId">Back to List</a>
+   </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
