--- a/Views/MenuCategories/Index.cshtml
+++ b/Views/MenuCategories/Index.cshtml
@@ -4,19 +4,16 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@ViewBag.Menu</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" asp-route-id="@ViewBag.MenuId">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Menu)
             </th>
             <th></th>
         </tr>
@@ -28,10 +25,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @ViewBag.Menu
-            </td>
-            <td>
-                <a  asp-controller="MenuItems" asp-action="Index" asp-route-id="@item.Id">Alternativ</a> |
+                <a asp-controller="MenuItems" asp-action="Index" asp-route-id="@item.Id">Alternativ</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
