--- a/Views/ActivityBookings/Index.cshtml
+++ b/Views/ActivityBookings/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.NumParticipants)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Activity.Id)
+                @Html.DisplayFor(modelItem => item.ActivityId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
