--- a/Views/MenuCategories/Index.cshtml
+++ b/Views/MenuCategories/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewBag.Menu</h1>
 
 <p>
-    <a asp-action="Create" asp-route-id="@ViewBag.MenuId">Create New</a>
+    <a asp-action="Create" asp-route-id="@ViewBag.route">Create New</a>
 </p>
 <table class="table">
     <thead>
