--- a/Views/MenuCategories/Create.cshtml
+++ b/Views/MenuCategories/Create.cshtml
@@ -3,8 +3,6 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-    Viewbag.menuId;
 <h1>Create</h1>
 
 <h4>MenuCategory</h4>
@@ -30,7 +28,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@ViewBag.route">Back to List</a>
 </div>
 
 @section Scripts {
