Fixat så att navbar länkar för adminfunktioner döljs om man inte är inloggad

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">@ViewBag.LoginMessage</h1>
+    <h2 class="display-4">@ViewBag.RoleMessage</h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
 </div>
