--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Menyer</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
+                            </li>
                         }
 
                         @if (!User.Identity.IsAuthenticated)
@@ -52,6 +55,10 @@
 
                     </ul>
                 </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a class="float-right flex-grow-2" style="color: white">Welcome @User.Identity.Name</a>
+                }
             </div>
         </nav>
     </header>
