--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,24 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">@ViewBag.LoginMessage</h1>
-    <h2 class="display-4">@ViewBag.RoleMessage</h2>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    @if (User.Identity.IsAuthenticated)
+    {
+        <div class="jumbotron">
+            <h1 class="display-3">@ViewBag.LoginMessage</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+    }
+
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <h3 class="display-3">Welcome guest!</h3>
+
+    }
 
 </div>
