--- a/Views/MenuItems/Create.cshtml
+++ b/Views/MenuItems/Create.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MenuCategoryId" class="control-label"></label>
-                <select asp-for="MenuCategoryId" class ="form-control" asp-items="ViewBag.MenuCategoryId"></select>
+                <select asp-for="MenuCategoryId" class ="form-control" asp-items="ViewBag.MenuCatId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
