mer ändringar wohoo

--- a/Views/Guest/Index.cshtml
+++ b/Views/Guest/Index.cshtml
@@ -1,12 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
+@{
+    ViewData["Title"] = "My Page";
+}
 @{
 }
 
 
 <h1>Välkommen ***Gäst(byt till användarens namn)</h1>
 
-@Html.ActionLink("Visa aktiviteter", null) @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på *@
-@Html.ActionLink("Restaurangen",null) @* Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord *@
-@Html.ActionLink("Mina Bokningar",null) @* Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. *@
+@Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på *@
+@Html.ActionLink("Restaurangen", null) @* Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord *@
+@Html.ActionLink("Mina Bokningar", null) @* Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. *@
