fixat boka redirect till ABookings

--- a/Views/Guest/GetActivities.cshtml
+++ b/Views/Guest/GetActivities.cshtml
@@ -30,12 +30,34 @@
             <td>
                 @Html.DisplayFor(x => i.StartTime)
             </td>
-            <td> @Html.ActionLink("Boka","BookActivity")</td>
+            <td> @Html.ActionLink("Boka", "Create","ActivityBookings")</td>
         </tr>
 
     }
 </table>
-
 <script>
-    $(document).ready
+    $(function () {
+        @*$("#popup-switch").click(() => {
+            console.log("clicked");
+            $("#test").toggleClass(".show");
+        });*@
+
+        $("#myBtn").click(function () {
+            $("#test").toggleClass("show");
+        });
+    });
+
+    const popWindow = document.getElementById('test');
+    popWindow.classList.toggle('active');
+    popWindow.addEventListener('blur', () => {
+        popWindow.classList.toggle('active');
+    });
 </script>
+
+<button id="myBtn">click</button>
+
+<div id="test">hej, ta bort mig</div>
+
+<div class="my-popup-container">
+    <span class="my-popup-text" id="my-popup">hello wórld, switch me pls</span>
+</div>
