--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,4 +27,5 @@
 
 
 
-@Html.ActionLink("GUEST", "Index","Guest")
+@Html.ActionLink("GUEST", "Index","Guest") <br />
+@Html.ActionLink("FULL MENU", "FullMenu", "RestaurantInfo")
