--- a/Views/RestaurantInfo/Index.cshtml
+++ b/Views/RestaurantInfo/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ResAktWebb.Models.RestaurantInfo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "RestaurantInfo";
 }
 
 <h1>Index</h1>
