--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,3 +29,43 @@
 
 @Html.ActionLink("GUEST", "Index","Guest") <br />
 @Html.ActionLink("FULL MENU", "FullMenu", "RestaurantInfo")
+
+<br />
+<br />
+<hr />
+
+
+<script>
+
+    $(function () {
+
+        // toggla av klassen för popbox
+        $("#myBtn").click(() => {
+            $("#pop").toggleClass("toggle-pop")
+        });
+
+        // Visa toast att bokning är skapad
+        $("#go").click(() => {
+            //SHOW TOAST
+            alert("Bokning skapad");
+        });
+    });
+
+
+</script>
+
+<button id="myBtn">show/hide</button>
+
+<div class="pop-fixed-box">
+    <div class="pop-box toggle-pop" id="pop">
+        <h3 style="color:red;">Form som skall fyllas</h3>
+        
+        <form method="post">
+            <input type="text"/>
+            <input type="submit" value="GO" id="go"/>
+        </form>
+        
+    
+
+    </div>
+</div>
