--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,10 +2,47 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 
+/* TOBBE CSS */
+
+.pop-fixed-box {
+    position: fixed;
+    left: 38.5%;
+    top: 50%;
+    background-color: #808080;
+    border: 1px solid black;
+}
+
+.pop-box {
+    position: relative;
+    margin: 10px;
+    padding: 10px;
+
+    /*border: 1px groove grey;
+    transition: width 1s, height 1s, transform 1s;
+    */
+}
+
+    .pop-box:hover {
+        @*width: 50%;
+        height: 300px;
+        *@
+    }
+
+.testing {
+    color: red;
+}
+
+
+.toggle-pop {
+    display: none;
+    border: none;
+}
+
+/****************************/
 .my-popup-container {
-    position:relative;
-    display:inline-block;
-    cursor:pointer;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .my-popup .my-popup-text {
@@ -25,6 +62,10 @@ for details on configuring this project to bundle and minify static web assets. 
 
 .show {
   display:none; 
+}
+
+.testing {
+    color: aqua;
 }
 
 
