--- a/Views/Guest/RestaurantInfo.cshtml
+++ b/Views/Guest/RestaurantInfo.cshtml
@@ -6,10 +6,12 @@
 
 <h1>Restaurant information</h1>
 
+@Html.ActionLink("MENU", "FullMenu", "RestaurantInfo")
 
 @foreach (var item in Model)
 {
     <div>@ViewBag.OpenHours</div>
     <div>@Html.DisplayFor(modelItem => item.Name): @Html.DisplayFor(modelItem => item.Open) - @Html.DisplayFor(modelItem => item.Closed)</div>
 }
+
 
