--- a/Views/MenuItems/Create.cshtml
+++ b/Views/MenuItems/Create.cshtml
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-id="@ViewBag.route">Back to List</a>
+    <a asp-controller="Menus" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
