--- a/Views/MenuCategories/Delete.cshtml
+++ b/Views/MenuCategories/Delete.cshtml
@@ -28,6 +28,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>
+        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
     </form>
 </div>
