--- a/Views/MenuCategories/Details.cshtml
+++ b/Views/MenuCategories/Details.cshtml
@@ -26,5 +26,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>
+    <a asp-controller="Menus" asp-action="Index">Back to List</a>
+    @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
 </div>
