--- a/Views/MenuItems/Details.cshtml
+++ b/Views/MenuItems/Details.cshtml
@@ -44,5 +44,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index" asp-route-id="@Model.MenuCategoryId">Back to List</a>
+    <a asp-controller="Menus" asp-action="Index">Back to List</a>
+    @*<a asp-action="Index" asp-route-id="@Model.MenuCategoryId">Back to List</a>*@
 </div>
