--- a/Views/MenuItems/Edit.cshtml
+++ b/Views/MenuItems/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MenuCategoryId" class="control-label"></label>
-                <select asp-for="MenuCategoryId" class="form-control" asp-items="ViewBag.MenuCategoryId"></select>
+                <select asp-for="MenuCategoryId" class="form-control" asp-items="ViewBag.MenuCatId"></select>
                 <span asp-validation-for="MenuCategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,7 +46,8 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-id="@Model.MenuCategoryId">Back to List</a>
+    @*<a asp-action="Index" asp-route-id="@Model.MenuCategoryId">Back to List</a>*@
+    <a asp-controller="Menus" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
